Many KMS tests - dmesg-warn/dmesg-fail/abort - WARNING: .* at drivers/gpu/drm/i915/display/intel_display.c:.* intel_atomic_commit_tail
<7> [119.318886] xe 0000:03:00.0: [drm:intel_crtc_state_dump [xe]] [PLANE:68:plane 5A] fb: [NOFB], visible: no
<7> [119.318947] xe 0000:03:00.0: [drm:intel_crtc_state_dump [xe]] [PLANE:77:cursor A] fb: [NOFB], visible: no
<4> [119.319254] ------------[ cut here ]------------
<4> [119.319255] xe 0000:03:00.0: [drm] drm_WARN_ON(ret)
<4> [119.319277] WARNING: CPU: 11 PID: 4324 at drivers/gpu/drm/i915/display/intel_display.c:7637 intel_atomic_commit_tail+0x16ab/0x17d0 [xe]
<4> [119.319351] Modules linked in: snd_hda_intel snd_hda_codec_realtek snd_hda_codec_generic snd_hda_scodec_component snd_hda_codec_hdmi snd_intel_dspcfg snd_hda_codec snd_hda_core snd_hwdep snd_pcm snd_timer snd soundcore mei_gsc xe drm_gpuvm drm_ttm_helper ttm gpu_sched drm_suballoc_helper drm_exec drm_display_helper cec rc_core drm_kunit_helpers drm_kms_helper drm_buddy i2c_algo_bit kunit intel_rapl_msr intel_rapl_common intel_uncore_frequency intel_uncore_frequency_common overlay x86_pkg_temp_thermal intel_powerclamp coretemp kvm_intel kvm joydev crct10dif_pclmul cmdlinepart crc32_pclmul polyval_clmulni spi_nor polyval_generic ghash_clmulni_intel sha256_ssse3 mtd mei_hdcp mei_pxp ee1004 hid_generic sha1_ssse3 mxm_wmi wmi_bmof aesni_intel crypto_simd cryptd rapl usbhid hid i2c_i801 intel_cstate i2c_mux spi_intel_pci i2c_smbus spi_intel igc video serial_multi_instantiate nls_iso8859_1 intel_pmc_core mei_me mei intel_vsec pmt_telemetry acpi_tad pinctrl_alderlake wmi acpi_pad pmt_class dm_multipath msr nvme_fabrics fuse
<4> [119.319413] efi_pstore nfnetlink ip_tables x_tables [last unloaded: snd_hda_intel]
<4> [119.319418] CPU: 11 UID: 0 PID: 4324 Comm: kms_ccs Tainted: G U W 6.12.0-xe #1
<4> [119.319421] Tainted: [U]=USER, [W]=WARN
<4> [119.319422] Hardware name: Micro-Star International Co., Ltd. MS-7D25/PRO Z690-A DDR4(MS-7D25), BIOS 1.10 12/13/2021
<4> [119.319423] RIP: 0010:intel_atomic_commit_tail+0x16ab/0x17d0 [xe]
<4> [119.319492] Code: 8b 78 08 4c 8b 6f 50 4d 85 ed 74 36 e8 de 54 3b e1 48 c7 c1 cb 89 ce a0 4c 89 ea 48 c7 c7 53 89 ce a0 48 89 c6 e8 e5 f6 66 e0 <0f> 0b e9 fc ea ff ff 41 f6 44 24 0a 0e 0f 85 26 fc ff ff e9 31 fc
<4> [119.319494] RSP: 0018:ffffc90008657950 EFLAGS: 00010246
<4> [119.319496] RAX: 0000000000000000 RBX: 0000000000000000 RCX: 0000000000000000
<4> [119.319497] RDX: 0000000000000000 RSI: 0000000000000000 RDI: 0000000000000000
<4> [119.319498] RBP: ffffc90008657a30 R08: 0000000000000000 R09: 0000000000000000
<4> [119.319499] R10: 0000000000000000 R11: 0000000000000000 R12: 00000000007f8010
<4> [119.319500] R13: ffff888103899310 R14: ffff888127031400 R15: ffff888120ba9000
<4> [119.319501] FS: 00007856f04e4900(0000) GS:ffff88888f380000(0000) knlGS:0000000000000000
<4> [119.319503] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [119.319504] CR2: 00007856f04d3000 CR3: 0000000122820000 CR4: 0000000000f52ef0
<4> [119.319505] PKRU: 55555554
<4> [119.319506] Call Trace:
<4> [119.319507] <TASK>
<4> [119.319508] ? show_regs+0x6c/0x80
<4> [119.319512] ? __warn+0x93/0x1c0
<4> [119.319515] ? intel_atomic_commit_tail+0x16ab/0x17d0 [xe]
<4> [119.319583] ? report_bug+0x182/0x1b0
<4> [119.319588] ? handle_bug+0x6e/0xb0
<4> [119.319590] ? exc_invalid_op+0x18/0x80
<4> [119.319592] ? asm_exc_invalid_op+0x1b/0x20
<4> [119.319597] ? intel_atomic_commit_tail+0x16ab/0x17d0 [xe]
<4> [119.319664] ? mutex_unlock+0x12/0x20
<4> [119.319666] ? __flush_workqueue+0x1fd/0x4f0
<4> [119.319672] intel_atomic_commit+0x2c7/0x310 [xe]
<4> [119.319740] ? intel_atomic_commit+0x2c7/0x310 [xe]
<4> [119.319807] drm_atomic_commit+0xad/0xf0
<4> [119.319809] ? __pfx___drm_printfn_info+0x10/0x10
<4> [119.319812] drm_mode_atomic_ioctl+0xc4b/0xf00
<4> [119.319819] ? __pfx_drm_mode_atomic_ioctl+0x10/0x10
<4> [119.319821] drm_ioctl_kernel+0xb9/0x120
<4> [119.319825] drm_ioctl+0x2f9/0x5b0
<4> [119.319827] ? __pfx_drm_mode_atomic_ioctl+0x10/0x10
<4> [119.319833] xe_drm_ioctl+0x53/0x80 [xe]
<4> [119.319873] __x64_sys_ioctl+0x9d/0xe0
<4> [119.319876] x64_sys_call+0x11ad/0x25f0
<4> [119.319879] do_syscall_64+0x91/0x180
<4> [119.319882] ? trace_hardirqs_off+0x5d/0xe0
<4> [119.319885] ? syscall_exit_to_user_mode+0x95/0x260
<4> [119.319888] ? do_syscall_64+0x9d/0x180
<4> [119.319891] ? trace_hardirqs_off+0x5d/0xe0
<4> [119.319893] ? syscall_exit_to_user_mode+0x95/0x260
<4> [119.319896] ? do_syscall_64+0x9d/0x180
<4> [119.319898] ? clear_bhb_loop+0x15/0x70
<4> [119.319900] ? clear_bhb_loop+0x15/0x70
<4> [119.319902] ? clear_bhb_loop+0x15/0x70
<4> [119.319904] entry_SYSCALL_64_after_hwframe+0x76/0x7e
<4> [119.319905] RIP: 0033:0x7856f2724ded
<4> [119.319907] Code: 04 25 28 00 00 00 48 89 45 c8 31 c0 48 8d 45 10 c7 45 b0 10 00 00 00 48 89 45 b8 48 8d 45 d0 48 89 45 c0 b8 10 00 00 00 0f 05 <89> c2 3d 00 f0 ff ff 77 1a 48 8b 45 c8 64 48 2b 04 25 28 00 00 00
<4> [119.319909] RSP: 002b:00007fff0b42b2f0 EFLAGS: 00000246 ORIG_RAX: 0000000000000010
<4> [119.319911] RAX: ffffffffffffffda RBX: 00005c8473447820 RCX: 00007856f2724ded
<4> [119.319912] RDX: 00007fff0b42b390 RSI: 00000000c03864bc RDI: 0000000000000005
<4> [119.319913] RBP: 00007fff0b42b340 R08: 00007856f2803b20 R09: 0000000000000000
<4> [119.319914] R10: 0000000000000022 R11: 0000000000000246 R12: 00007fff0b42b390
<4> [119.319915] R13: 00000000c03864bc R14: 0000000000000005 R15: 00005c8473428630
<4> [119.319919] </TASK>
<4> [119.319920] irq event stamp: 509137
<4> [119.319921] hardirqs last enabled at (509143): [<ffffffff811e7859>] __up_console_sem+0x79/0xa0
<4> [119.319924] hardirqs last disabled at (509148): [<ffffffff811e783e>] __up_console_sem+0x5e/0xa0
<4> [119.319926] softirqs last enabled at (508028): [<ffffffff81118d5f>] __irq_exit_rcu+0xff/0x120
<4> [119.319928] softirqs last disabled at (507997): [<ffffffff81118d5f>] __irq_exit_rcu+0xff/0x120
<4> [119.319930] ---[ end trace 0000000000000000 ]---